# 20251202_Car_ex

./: .cppcheckignore  .gitignore  AGENT.md  AI_INTERACTIONS.md  CMakeLists.txt  README.md  TOOLCHAIN_SETUP.md  pytest.ini
.specify/memory/: constitution.md
.specify/scripts/: check-traceability.ps1  create-feature.ps1
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/analysis/: traceability_us1.md  traceability_us2.md  traceability_us3.md
docs/architecture/: clock_monitor_design.md  ecc_engine_design.md  vdd_monitor_design.md
docs/framework/: FRAMEWORK.md  IMPLEMENTATION-SUMMARY.md  README.md  SPECIFICATION-REQUIREMENTS-CLARIFICATION.md
docs/framework/checklists/: specification-requirements-quality.md
docs/framework/guides/: FEATURE-CREATION-GUIDE.md  PROCESS-GUIDE.md
docs/framework/templates/: REQUIREMENTS-TEMPLATE.md  SAFETY-ANALYSIS-TEMPLATE.md  TRACEABILITY-MATRIX-TEMPLATE.md
firmware/: CMakeLists.txt  requirements.txt
firmware/include/: safety_types.h
firmware/src/clock/: clk_event_handler.c  clk_monitor_service.c
firmware/src/hal/: interrupt_handler.c  power_api.c
firmware/src/memory/: ecc_handler.c  ecc_service.c
firmware/src/safety/: fault_aggregator.c  fault_statistics.c  safety_fsm.c
firmware/tests/: CMakeLists.txt
firmware/tests/integration/: test_clock_fault_scenarios.py  test_ecc_fault_scenarios.py  test_pwr_fault_scenarios.py
firmware/tests/unit/: test_clk_monitor.py  test_ecc_service.py  test_fault_aggregator.py  test_pwr_monitor.py  test_safety_fsm.py
rtl/: CMakeLists.txt  verilator.cfg
rtl/clock_monitor/: clock_watchdog.v  pll_monitor.v
rtl/memory_protection/: ecc_controller.v  ecc_decoder.v  ecc_encoder.v
specs/001-power-management-safety/: CONSISTENCY-ANALYSIS-REPORT.md  IMPROVEMENTS-COMPLETED.md  plan.md  spec.md  tasks.md
verification/: CMakeLists.txt
verification/testbench/: clock_monitor_tb.sv  ecc_testbench.sv  power_monitor_tb.sv
verification/tests/: ecc_fault_injection_test.sv  vdd_fault_injection_test.sv
